[package]
name = "muko"
version = "0.1.0"
edition = "2024"
authors = ["Shi Yan <billconan@gmail.com>"]
license = "MIT OR Apache-2.0"
description = "A command-line utility to manage hosts file entries and quickly toggle between development and production DNS settings"
readme = "README.md"
homepage = "https://github.com/shi-yan/muko"
repository = "https://github.com/shi-yan/muko"
keywords = ["cli", "hostfile"]
categories = ["command-line-utilities"]

[dependencies]
clap = { version = "4.5", features = ["derive"] }
comfy-table = "7.2.1"
dns-lookup = "3.0.1"
regex = "1.12.2"


